- modify the text-truncate class in the rank section. - modify the img size settings in the rank section to resolve conflicts.

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -2,6 +2,7 @@ body {
     font-family: "Noto Sans TC", "Roboto Helvetica", sans-serif;
     line-height: 1.5;
 }
+
 h1,
 h2,
 h3,
@@ -10,24 +11,35 @@ h5,
 h6 {
     margin-bottom: 0;
 }
+
 p {
     margin-bottom: 0;
 }
+
 a {
     text-decoration: none;
     display: inline-block;
     color: inherit;
 }
+
 ul {
     list-style: none;
     padding: 0;
     margin: 0;
 }
-img{
+
+ol {
+    list-style: none;
+}
+
+img {
     max-width: 100%;
     height: auto;
     vertical-align: middle;
 }
-*,*::before,*::after{
+
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
